Notes before lunch